--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
